force-app/main/default/objects/Unit_Hold__c/Unit_Hold__c.object-meta.xml
<CustomObject>
    <label>Unit Hold</label>
    <nameField>
        <displayFormat>UH-{0000}</displayFormat>
        <label>Unit Hold  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Hold</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>