force-app/main/default/objects/Unit_Hold__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Unit Hold</relationshipLabel>
    <relationshipName>Unit_Hold</relationshipName>
    <type>Lookup</type>
</CustomField>