force-app/main/default/objects/Unit_Hold__c/fields/Customer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Full_Name__c</fullName>
    <label>Customer Full Name</label>
    <type>TextArea</type>
</CustomField>