force-app/main/default/objects/Unit_Hold__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last (family) name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>