force-app/main/default/objects/Unit_Hold__c/fields/Middle_Name_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_if_applicable__c</fullName>
    <label>Middle Name (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>