force-app/main/default/objects/Unit_Hold__c/fields/Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>Unit Hold</relationshipLabel>
    <relationshipName>Unit_Hold</relationshipName>
    <type>Lookup</type>
</CustomField>