force-app/main/default/objects/Unit_Hold__c/fields/Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Time__c</fullName>
    <label>Request Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 hour</fullName>
            </value>
            <value>
                <fullName>2 hour</fullName>
            </value>
            <value>
                <fullName>3 hour</fullName>
            </value>
            <value>
                <fullName>4 hour</fullName>
            </value>
            <value>
                <fullName>5 hour</fullName>
            </value>
            <value>
                <fullName>6 hour</fullName>
            </value>
            <value>
                <fullName>7 hour</fullName>
            </value>
            <value>
                <fullName>8 hour</fullName>
            </value>
            <value>
                <fullName>9 hour</fullName>
            </value>
            <value>
                <fullName>10 hour</fullName>
            </value>
            <value>
                <fullName>11 hour</fullName>
            </value>
            <value>
                <fullName>12 hour</fullName>
            </value>
            <value>
                <fullName>13 hour</fullName>
            </value>
            <value>
                <fullName>14 hour</fullName>
            </value>
            <value>
                <fullName>15 hour</fullName>
            </value>
            <value>
                <fullName>16 hour</fullName>
            </value>
            <value>
                <fullName>17 hour</fullName>
            </value>
            <value>
                <fullName>18 hour</fullName>
            </value>
            <value>
                <fullName>19 hour</fullName>
            </value>
            <value>
                <fullName>20 hour</fullName>
            </value>
            <value>
                <fullName>21 hour</fullName>
            </value>
            <value>
                <fullName>22 hour</fullName>
            </value>
            <value>
                <fullName>23 hour</fullName>
            </value>
            <value>
                <fullName>1 Day</fullName>
            </value>
            <value>
                <fullName>2 Days</fullName>
                <isActive>false</isActive>
                <label>2 Days</label>
            </value>
            <value>
                <fullName>3 Days</fullName>
                <isActive>false</isActive>
                <label>3 Days</label>
            </value>
            <value>
                <fullName>4 Days</fullName>
                <isActive>false</isActive>
                <label>4 Days</label>
            </value>
            <value>
                <fullName>5 Days</fullName>
                <isActive>false</isActive>
                <label>5 Days</label>
            </value>
            <value>
                <fullName>6 Days</fullName>
                <isActive>false</isActive>
                <label>6 Days</label>
            </value>
            <value>
                <fullName>7 Days</fullName>
                <isActive>false</isActive>
                <label>7 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>