force-app/main/default/objects/Unit_Hold__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unit_Hold</relationshipName>
    <type>Lookup</type>
</CustomField>