force-app/main/default/objects/Unit_Hold__c/fields/Sales_Vp_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Vp_Name__c</fullName>
    <formula>Sales_VP__r.FirstName + &apos; &apos; + Sales_VP__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Vp Name</label>
    <type>Text</type>
</CustomField>