force-app/main/default/objects/Unit_Hold__c/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unit_Hold3</relationshipName>
    <type>Lookup</type>
</CustomField>