force-app/main/default/objects/Unit_Hold__c/fields/SVP_Name__c.field-meta.xml
<CustomField>
    <fullName>SVP_Name__c</fullName>
    <formula>SVP__r.FirstName + &apos; &apos; + SVP__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SVP Name</label>
    <type>Text</type>
</CustomField>