force-app/main/default/objects/Unit_Hold__c/fields/Unit_Hold_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Hold_Approval_Status__c</fullName>
    <label>Unit Hold Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with VP</fullName>
            </value>
            <value>
                <fullName>Pending with CSO</fullName>
            </value>
            <value>
                <fullName>Approved by VP</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected by VP</fullName>
            </value>
            <value>
                <fullName>Rejected by CSO</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending with SVP</fullName>
            </value>
            <value>
                <fullName>Approved by SVP</fullName>
            </value>
            <value>
                <fullName>Rejected by SVP</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>