force-app/main/default/objects/Unit_Hold__c/fields/Unit_Hold_Requested__c.field-meta.xml
<CustomField>
    <fullName>Unit_Hold_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Hold Requested</label>
    <type>Checkbox</type>
</CustomField>