force-app/main/default/objects/Unit_Hold__c/fields/Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>PropStrength__Property__c</referenceTo>
    <relationshipLabel>Unit Hold</relationshipLabel>
    <relationshipName>Unit_Hold</relationshipName>
    <type>Lookup</type>
</CustomField>