force-app/main/default/objects/Unit_Hold__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <formula>Unit_No__r.PropStrength__Property_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit No.</label>
    <type>Text</type>
</CustomField>