force-app/main/default/objects/Unit_Hold__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Director__c</columns>
    <columns>Customer_Full_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Unit_Hold_Approval_Status__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Unit_Name__c</columns>
    <columns>Unit_Hold_Requested__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>