force-app/main/default/objects/Unit_Hold__c/listViews/CSO_Approved_Unit_Hold.listView-meta.xml
<ListView>
    <fullName>CSO_Approved_Unit_Hold</fullName>
    <columns>Unit__c</columns>
    <columns>Request_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_VP__c</columns>
    <columns>SVP_Name__c</columns>
    <columns>Unit_Hold_Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_Hold_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>CSO Approved Unit Hold</label>
    <sharedTo>
        <role>Chief_Sales_Officer</role>
    </sharedTo>
</ListView>