force-app/main/default/objects/Unit_Hold__c/listViews/My_Unit_Hold_Request.listView-meta.xml
<ListView>
    <fullName>My_Unit_Hold_Request</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Request_Time__c</columns>
    <columns>Unit__c</columns>
    <columns>Unit_Hold_Approval_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Unit Hold Request</label>
</ListView>